Added group extension property